2004-04-13  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkactiongroup.c (gtk_action_group_add_action): Document
	possible accelerator gotcha when using this function.  (#139641, 
	Christian Persch)

	* gtk/gtkuimanager.c (node_remove_ui_reference): Don't leak
	list nodes.  (#138862, Morten Welinder)

Tue Apr 13 12:24:49 2004  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_destroy): remove unused
	variable.
	(gtk_tree_view_button_press): If we activated the row we don't
	want to grab focus back, as moving focus to another widget is
	pretty common, #138458

2004-04-12  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooser.c (gtk_file_chooser_class_init): Added
	documentation to all the signals.

2004-04-12  Matthias Clasen  <mclasen@dhcp64-228.boston.redhat.com>

	* gtk/gtkcombobox.c (gtk_combo_box_unset_model): Don't unref
	model if it is NULL. (#139770)

	* gtk/gtktreeview.c (gtk_tree_view_get_cell_area): Typo fix.

	* gtk/gtkentrycompletion.c (gtk_entry_completion_init): Don't add
	a shadow inside the scrolled window, add it around the vbox.

	* gtk/gtkentryprivate.h: 
	* gtk/gtkentrycompletion.c (_gtk_entry_completion_resize_popup): 
	Return a boolean indicating whether the popup is positioned above 
	or below. Scroll the completions to the beginning or the end, 
	depending on the positioning.

	* gtk/gtkentry.c (gtk_entry_completion_key_press): Make keynav
	wrap around in the entry completion popup, and allow GDK_UP to 
	enter the popup.  (#137440)

2004-04-12  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c (gtk_entry_size_request): Make sure the style is 
	there before using it.

Sun Apr 11 15:08:45 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtktreeprivate.h: Moved search entries into priv data.

	* gtk/gtktreeview.c: Prep for type-ahead support.

	(gtk_tree_view_destroy): Destroy the search window explicitly.
	(gtk_tree_view_key_press): Minor change; prep for type-ahead