@@ -1,3 +1,7 @@
+2004-04-13  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/tmpl/gtkuimanager.sgml: Some corrections.
+
 2004-04-13  Federico Mena Quintero  <federico@ximian.com>
 
 	* gtk/tmpl/gtkfilechooser.sgml: Typo fix.
